Fix cosmetic issues on profile and today screen (#221)
- Fix round borders for sepataror lines on today screen.
- Add paddings for last columns on profile screen tabels it looks too close to border on device and space before week appointments number.
- Fix  #147 issue with long address on my profile screen.

--- a/mobile/stylist/src/app/profile/profile-info/profile-info.scss
+++ b/mobile/stylist/src/app/profile/profile-info/profile-info.scss
@@ -22,5 +22,9 @@ profile-info .ProfileInfo {
   .ProfileInfo-subtitle {
     font-size: $t-base;
     color: color($grayscale, 400);
+    max-width: 170px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
