--- a/mobile/stylist/src/app/today/today.component.scss
+++ b/mobile/stylist/src/app/today/today.component.scss
@@ -149,6 +149,7 @@ page-today {
         text-align: left;
         width: 33.33%;
         height: auto;
+        border-radius: 0px;
 
         .button-inner{
           font-size: pxtorem(34);
